--- a/.github/workflows/buildwindowsimage.yml
+++ b/.github/workflows/buildwindowsimage.yml
@@ -22,13 +22,13 @@ jobs:
     - name: Publish Images to Docker Hub - Pre Release
       if: ${{ github.event.release.prerelease == true }} 
       run: |
-        docker build . --file EstateManagement/| --tag stuartferguson/estatemanagementwindows:dev
+        docker build . --file EstateManagement/Dockerfilewindows --tag stuartferguson/estatemanagementwindows:dev
         docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
         docker push stuartferguson/estatemanagement:dev
 
     - name: Publish Images to Docker Hub - Formal Release
       if: ${{ github.event.release.prerelease == false }} 
       run: |
-        docker build . --file EstateManagement/| --tag stuartferguson/estatemanagementwindows:latest
+        docker build . --file EstateManagement/Dockerfilewindows --tag stuartferguson/estatemanagementwindows:latest
         docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
         docker push stuartferguson/estatemanagement:latest
