--- a/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
+++ b/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\EstateManagement.DataTransferObjects\EstateManagement.DataTransferObjects.csproj" />
     <ProjectReference Include="..\EstateManagement.EstateAggregate\EstateManagement.EstateAggregate.csproj" />
     <ProjectReference Include="..\EstateManagement.MerchantAggregate\EstateManagement.MerchantAggregate.csproj" />
+    <ProjectReference Include="..\EstateManagement.MerchantDepositAggregate\EstateManagement.MerchantDepositListAggregate.csproj" />
     <ProjectReference Include="..\EstateManagement.MerchantStatementAggregate\EstateManagement.MerchantStatementAggregate.csproj" />
     <ProjectReference Include="..\EstateManagement.Models\EstateManagement.Models.csproj" />
     <ProjectReference Include="..\EstateManagement.Repository\EstateManagement.Repository.csproj" />
