--- a/EstateManagement.Client/EstateManagement.Client.csproj
+++ b/EstateManagement.Client/EstateManagement.Client.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ClientProxyBase" Version="2022.12.0-beta4" />
+    <PackageReference Include="ClientProxyBase" Version="2022.12.2" />
   </ItemGroup>
 
   <ItemGroup>
