--- a/EstateManagement.Estate.DomainEvents/EstateManagement.Estate.DomainEvents.csproj
+++ b/EstateManagement.Estate.DomainEvents/EstateManagement.Estate.DomainEvents.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="2022.12.0-beta4" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="2022.12.2" />
   </ItemGroup>
 </Project>
