--- a/EstateManagement.MerchantDepositAggregate/EstateManagement.MerchantDepositListAggregate.csproj
+++ b/EstateManagement.MerchantDepositAggregate/EstateManagement.MerchantDepositListAggregate.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Shared" Version="2022.12.0-beta4" />
-    <PackageReference Include="Shared.EventStore" Version="2022.12.0-beta4" />
+    <PackageReference Include="Shared" Version="2022.12.2" />
+    <PackageReference Include="Shared.EventStore" Version="2022.12.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
   </ItemGroup>
 
