--- a/EstateManagement.MerchantStatement.DomainEvents/EstateManagement.MerchantStatement.DomainEvents.csproj
+++ b/EstateManagement.MerchantStatement.DomainEvents/EstateManagement.MerchantStatement.DomainEvents.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="2022.12.0-beta4" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="2022.12.2" />
   </ItemGroup>
 
 </Project>
