--- a/EstateManagement.Repository/EstateManagement.Repository.csproj
+++ b/EstateManagement.Repository/EstateManagement.Repository.csproj
@@ -5,16 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
-    <PackageReference Include="Shared" Version="2023.1.0" />
-    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2022.12.3-build48" />
-    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2022.12.3-build48" />
-    <PackageReference Include="TransactionProcessor.Reconciliation.DomainEvents" Version="2022.12.3-build48" />
-    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2022.12.3-build48" />
-    <PackageReference Include="FileProcessor.File.DomainEvents" Version="2022.12.3-build31" />
-    <PackageReference Include="FileProcessor.FileImportLog.DomainEvents" Version="2022.12.3-build31" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.7" />
+    <PackageReference Include="Shared" Version="2023.6.1" />
+    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2023.6.2" />
+    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2023.6.2" />
+    <PackageReference Include="TransactionProcessor.Reconciliation.DomainEvents" Version="2023.6.2" />
+    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2023.6.2" />
+    <PackageReference Include="FileProcessor.File.DomainEvents" Version="2023.6.1" />
+    <PackageReference Include="FileProcessor.FileImportLog.DomainEvents" Version="2023.6.1" />
   </ItemGroup>
 
   <ItemGroup>
