--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AppSettings": {
     "SubscriptionConfiguration": {
-      "InternalSubscriptionService": "false",
+      "InternalSubscriptionService": "true",
       "PersistentSubscriptionPollingInSeconds": 480,
       "InternalSubscriptionServiceCacheDuration": 120,
       "SubscriptionWorkers": [
