--- a/EstateManagement.Database/EstateManagement.Database.csproj
+++ b/EstateManagement.Database/EstateManagement.Database.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="EntityFrameworkCore.Exceptions.Common" Version="6.0.3" />
+		<PackageReference Include="EntityFrameworkCore.Exceptions.MySql.Pomelo" Version="6.0.3" />
+		<PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer" Version="6.0.3.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.7" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.7">
 			<PrivateAssets>all</PrivateAssets>
