--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -74,8 +74,20 @@ jobs:
     - name: Build Docker Image
       run: docker build . --file EstateManagement/Dockerfile --tag estatemanagement:latest
 
-    - name: Run Integration Tests
-      run: dotnet test "EstateManagement.IntegrationTests\EstateManagement.IntegrationTests.csproj"
+    #- name: Run Integration Tests
+      #run: dotnet test "EstateManagement.IntegrationTests\EstateManagement.IntegrationTests.csproj"
+
+    - name: Run Estate Integration Tests
+      run: dotnet test "EstateManagement.IntegrationTests\EstateManagement.IntegrationTests.csproj" --filter Category=estate
+
+    - name: Run Merchant Integration Tests
+      run: dotnet test "EstateManagement.IntegrationTests\EstateManagement.IntegrationTests.csproj" --filter Category=merchant
+
+    - name: Run Contract Integration Tests
+      run: dotnet test "EstateManagement.IntegrationTests\EstateManagement.IntegrationTests.csproj" --filter Category=contract
+
+    - name: Run Settlement Integration Tests
+      run: dotnet test "EstateManagement.IntegrationTests\EstateManagement.IntegrationTests.csproj" --filter Category=settlement
 
     - uses: actions/upload-artifact@v2
       if: ${{ failure() }}
