--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2.3.4
 
+    - name: Check disk space
+      run: df . -h
+
     - name: Set Up Variables
       run: echo "action_url=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" >> $GITHUB_ENV
 
@@ -45,17 +48,29 @@ jobs:
       with:
         files: ./lcov1.info,./lcov2.info,./lcov3.info,./lcov4.info,./lcov5.info,./lcov6.info,./lcov7.info
 
+    - name: Check disk space
+      run: df . -h
+
     - name: Build Docker Image
       run: docker build . --file EstateManagement/Dockerfile --tag estatemanagement:latest
 
     #- name: Run Integration Tests
       #run: dotnet test "EstateManagement.IntegrationTests\EstateManagement.IntegrationTests.csproj"
+    
+    - name: Check disk space
+      run: df . -h
 
     - name: Run Estate Integration Tests
       run: dotnet test "EstateManagement.IntegrationTests\EstateManagement.IntegrationTests.csproj" --filter Category=estate
 
+    - name: Check disk space
+      run: df . -h
+
     - name: Run Merchant Integration Tests
       run: dotnet test "EstateManagement.IntegrationTests\EstateManagement.IntegrationTests.csproj" --filter Category=merchant
+
+    - name: Check disk space
+      run: df . -h
 
     - name: Run Contract Integration Tests
       run: dotnet test "EstateManagement.IntegrationTests\EstateManagement.IntegrationTests.csproj" --filter Category=contract
