--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="2023.6.1" />
+    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="2023.11.1" />
     <PackageReference Include="EventStoreProjections" Version="2023.12.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.7" />
     <PackageReference Include="ClientProxyBase" Version="2023.12.2" />
@@ -17,15 +17,15 @@
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
     <PackageReference Include="NLog" Version="5.2.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.0" />
-    <PackageReference Include="SecurityService.Client" Version="2023.6.1" />
+    <PackageReference Include="SecurityService.Client" Version="2023.12.1" />
     <PackageReference Include="Shared" Version="2023.12.2" />
     <PackageReference Include="Shared.IntegrationTesting" Version="2023.12.2" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
     <PackageReference Include="SpecFlow" Version="3.9.74" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.74" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.9.74" />
-    <PackageReference Include="TransactionProcessor.Client" Version="2023.8.2-build66" />
-    <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2023.11.2" />
+    <PackageReference Include="TransactionProcessor.Client" Version="2023.12.2" />
+    <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2023.12.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <PrivateAssets>all</PrivateAssets>
@@ -35,7 +35,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2023.11.2" />
+    <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2023.12.1" />
   </ItemGroup>
 
   <ItemGroup>
